<resources>
    <string name="app_name">MaxPhoneBook</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_notes">Notes</string>
    <string name="nav_events">Events</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header">Contacts app</string>
    <string name="lastTimeEditedLabel">Edited</string>
    <string name="firstNameLabel">First name:</string>
    <string name="lastNameLabel">Last name:</string>
    <string name="phoneNumberLabel">Phone number:</string>
    <string name="emailLabel">Email:</string>
    <string name="addContactFinishButton">Add to contacts</string>
    <string name="save_contact_failed">Unable to save contact</string>
    <string name="DeleteText">Delete</string>
    <string name="updateContactButton">Update</string>
    <string name="invalidNameError">Please, enter first or last name correctly.</string>
    <string name="dateOfBirth">Date of birth:</string>
    <string name="homeAddress">Home address</string>
    <string name="unableFormatDateText">Unable to format date:</string>
    <string name="invalidDateFormat">Invalid date format:</string>
    <string name="unableToUpdateContact">Couldn\'t save contact.</string>
    <string name="unableToUpdateContactIcon">Unable to update contact icon.</string>
    <string name="containsProhibitedChars">%s contains prohibited characters.</string>
    <string name="invalidEmail">Invalid email format.</string>
    <string name="emptyStringIsNotAllowed">Empty %s is not allowed.</string>
    <string name="contactGroupLabel">Group:</string>
</resources>
